Texture tab (Properties panel) dropdown list shows erratic behavior #49997

Closed
opened 2016-11-11 22:04:08 +01:00 by Andreas Halm · 4 comments

Windows 7, Blender 2.78a

When you have a lot of textures on one object, the dropdown list bugs out, showing the headers below its child items and the scrollwheel direction is reversed.

Steps to reproduce:

  • Startup scene, select cycles renderer, select the default cube, go to materials and set to "use nodes"
  • Go to node editor, add a texture (for example checker texture, doesn't need to be connected to anything)
  • In the properties panel, click the textures tab and verify everything is in place.
  • Duplicate the texture 20 times
  • The texture dropdown menu shows the described behavior

The behavior may depend on where the properties panel actually is and/or what the window position is. This was tested using the default layout.
It seems to me this is a quite obvious bug, if it has been reported already I am sorry for the inconvenience.

texture-list-bug-1.jpg

Windows 7, Blender 2.78a When you have a lot of textures on one object, the dropdown list bugs out, showing the headers below its child items and the scrollwheel direction is reversed. Steps to reproduce: - Startup scene, select cycles renderer, select the default cube, go to materials and set to "use nodes" - Go to node editor, add a texture (for example checker texture, doesn't need to be connected to anything) - In the properties panel, click the textures tab and verify everything is in place. - Duplicate the texture 20 times - The texture dropdown menu shows the described behavior The behavior may depend on where the properties panel actually is and/or what the window position is. This was tested using the default layout. It seems to me this is a quite obvious bug, if it has been reported already I am sorry for the inconvenience. ![texture-list-bug-1.jpg](https://archive.blender.org/developer/F397512/texture-list-bug-1.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @A-Halm

Added subscriber: @A-Halm

This issue was referenced by cc8132b0c8

This issue was referenced by cc8132b0c83e60d46e24ecec93744f0dd2b5db90

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49997
No description provided.