Fix T49997: don't flip texture users menu in texture properties.